deployment/frontend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      name: frontend
  template:
    metadata:
      name: frontend-template
      labels:
        name: frontend
    spec:
      containers:
        - image: tetrohed/website-frontend
          name: app
          ports:
            - containerPort: 3000

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
          successThreshold: 1
