deployment/frontend_service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-loadbalancer
spec:
  selector:
    name: frontend

  type: ClusterIP
  ports:
    - name: http
      nodePort: null
      port: 80
      targetPort: 3000
      protocol: TCP
